added adaptive versions for component employees

--- a/src/admin-staff.html
+++ b/src/admin-staff.html
@@ -135,7 +135,7 @@
               </div>
             </div>
 
-            <div class="alert-staff alert-staff--gray">
+            <div class="alert-staff alert-staff--gray mobile-hide">
               <span class="alert-staff__sum">22 employees</span>
               <span class="text-success">8 completed all courses</span>
               <span class="text-danger">2 overdue</span>
@@ -143,7 +143,7 @@
             </div>
 
             <div class="employees">
-              <div class="employees__header">
+              <div class="employees__header mobile-hide">
                 <div class="employees__col employees__col--1">Employee</div>
                 <div class="employees__col employees__col--2">deadline</div>
                 <div class="employees__col employees__col--3">watched</div>
@@ -157,8 +157,8 @@
                 </div>
                 <div class="employees__col employees__info">
                   <div class="employees__col employees__name">Joy Haynero</div>
-                  <div class="employees__col employees__deadline"><input type="date"></div>
-                  <div class="employees__col employees__wathched">8h 30m</div>
+                  <div class="employees__col employees__deadline mobile-hide"><input type="date"></div>
+                  <div class="employees__col employees__wathched mobile-hide">8h 30m</div>
                   <div class="employees__col employees__correct">82%</div>
                   <div class="employees__col employees__passed">
                     <div class="progress progress--progress progress--small progress--dark">
@@ -166,7 +166,7 @@
                       <div class="progress__text">5/16</div>
                     </div>
                   </div>
-                  <div class="employees__col employees__restart">
+                  <div class="employees__col employees__restart mobile-hide">
                     <button class="employees__btn-restart">
                       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 18.179 18.179"><g fill="#455a64"><path d="M9.09 0a.37.37 0 0 0 0 .74c4.604 0 8.35 3.746 8.35 8.35s-3.746 8.35-8.35 8.35S.74 13.694.74 9.09a8.33 8.33 0 0 1 4.512-7.418.37.37 0 0 0-.34-.657A9.066 9.066 0 0 0 0 9.09c0 5.01 4.078 9.088 9.09 9.088s9.088-4.078 9.088-9.09S14.1 0 9.088 0z"/><path d="M12.653 4.407a5.828 5.828 0 0 0-3.563-1.2c-3.244 0-5.884 2.64-5.884 5.883s2.64 5.884 5.884 5.884a5.848 5.848 0 0 0 4.16-1.723.37.37 0 0 0-.522-.522 5.11 5.11 0 0 1-3.637 1.507c-2.835 0-5.143-2.308-5.143-5.144S6.255 3.948 9.09 3.948a5.168 5.168 0 0 1 4.94 3.706.37.37 0 0 0 .71-.206 5.925 5.925 0 0 0-2.087-3.04z"/><path d="M13.427 7.97a.37.37 0 0 0-.523.523l1.392 1.392a.37.37 0 0 0 .524 0l1.392-1.392a.37.37 0 0 0-.523-.523L14.56 9.1l-1.133-1.13z"/></g></svg>
                     </button>
@@ -179,8 +179,8 @@
                 </div>
                 <div class="employees__col employees__info">
                   <div class="employees__col employees__name">Gladys Cross</div>
-                  <div class="employees__col employees__deadline"><input type="date"></div>
-                  <div class="employees__col employees__wathched">12h 20m</div>
+                  <div class="employees__col employees__deadline mobile-hide"><input type="date"></div>
+                  <div class="employees__col employees__wathched mobile-hide">12h 20m</div>
                   <div class="employees__col employees__correct">92%</div>
                   <div class="employees__col employees__passed">
                     <div class="progress progress--success progress--small progress--dark">
@@ -188,7 +188,7 @@
                       <div class="progress__text">12/12</div>
                     </div>
                   </div>
-                  <div class="employees__col employees__restart">
+                  <div class="employees__col employees__restart mobile-hide">
                     <button class="employees__btn-restart">
                       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 18.179 18.179"><g fill="#455a64"><path d="M9.09 0a.37.37 0 0 0 0 .74c4.604 0 8.35 3.746 8.35 8.35s-3.746 8.35-8.35 8.35S.74 13.694.74 9.09a8.33 8.33 0 0 1 4.512-7.418.37.37 0 0 0-.34-.657A9.066 9.066 0 0 0 0 9.09c0 5.01 4.078 9.088 9.09 9.088s9.088-4.078 9.088-9.09S14.1 0 9.088 0z"/><path d="M12.653 4.407a5.828 5.828 0 0 0-3.563-1.2c-3.244 0-5.884 2.64-5.884 5.883s2.64 5.884 5.884 5.884a5.848 5.848 0 0 0 4.16-1.723.37.37 0 0 0-.522-.522 5.11 5.11 0 0 1-3.637 1.507c-2.835 0-5.143-2.308-5.143-5.144S6.255 3.948 9.09 3.948a5.168 5.168 0 0 1 4.94 3.706.37.37 0 0 0 .71-.206 5.925 5.925 0 0 0-2.087-3.04z"/><path d="M13.427 7.97a.37.37 0 0 0-.523.523l1.392 1.392a.37.37 0 0 0 .524 0l1.392-1.392a.37.37 0 0 0-.523-.523L14.56 9.1l-1.133-1.13z"/></g></svg>
                     </button>
@@ -201,8 +201,8 @@
                 </div>
                 <div class="employees__col employees__info">
                   <div class="employees__col employees__name">Jesus Ross</div>
-                  <div class="employees__col employees__deadline"><input type="date"></div>
-                  <div class="employees__col employees__wathched">12h 20m</div>
+                  <div class="employees__col employees__deadline mobile-hide"><input type="date"></div>
+                  <div class="employees__col employees__wathched mobile-hide">12h 20m</div>
                   <div class="employees__col employees__correct">86%</div>
                   <div class="employees__col employees__passed">
                     <div class="progress progress--succces progress--small progress--dark">
@@ -210,7 +210,7 @@
                       <div class="progress__text">12/12</div>
                     </div>
                   </div>
-                  <div class="employees__col employees__restart">
+                  <div class="employees__col employees__restart mobile-hide">
                     <button class="employees__btn-restart">
                       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 18.179 18.179"><g fill="#455a64"><path d="M9.09 0a.37.37 0 0 0 0 .74c4.604 0 8.35 3.746 8.35 8.35s-3.746 8.35-8.35 8.35S.74 13.694.74 9.09a8.33 8.33 0 0 1 4.512-7.418.37.37 0 0 0-.34-.657A9.066 9.066 0 0 0 0 9.09c0 5.01 4.078 9.088 9.09 9.088s9.088-4.078 9.088-9.09S14.1 0 9.088 0z"/><path d="M12.653 4.407a5.828 5.828 0 0 0-3.563-1.2c-3.244 0-5.884 2.64-5.884 5.883s2.64 5.884 5.884 5.884a5.848 5.848 0 0 0 4.16-1.723.37.37 0 0 0-.522-.522 5.11 5.11 0 0 1-3.637 1.507c-2.835 0-5.143-2.308-5.143-5.144S6.255 3.948 9.09 3.948a5.168 5.168 0 0 1 4.94 3.706.37.37 0 0 0 .71-.206 5.925 5.925 0 0 0-2.087-3.04z"/><path d="M13.427 7.97a.37.37 0 0 0-.523.523l1.392 1.392a.37.37 0 0 0 .524 0l1.392-1.392a.37.37 0 0 0-.523-.523L14.56 9.1l-1.133-1.13z"/></g></svg>
                     </button>
@@ -223,8 +223,8 @@
                 </div>
                 <div class="employees__col employees__info">
                   <div class="employees__col employees__name">Howard Curro</div>
-                  <div class="employees__col employees__deadline"><input type="date"></div>
-                  <div class="employees__col employees__wathched">12m</div>
+                  <div class="employees__col employees__deadline mobile-hide"><input type="date"></div>
+                  <div class="employees__col employees__wathched mobile-hide">12m</div>
                   <div class="employees__col employees__correct">52%</div>
                   <div class="employees__col employees__passed">
                     <div class="progress progress--danger progress--small progress--dark">
@@ -232,7 +232,7 @@
                       <div class="progress__text">0/16</div>
                     </div>
                   </div>
-                  <div class="employees__col employees__restart">
+                  <div class="employees__col employees__restart mobile-hide">
                     <button class="employees__btn-restart">
                       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 18.179 18.179"><g fill="#455a64"><path d="M9.09 0a.37.37 0 0 0 0 .74c4.604 0 8.35 3.746 8.35 8.35s-3.746 8.35-8.35 8.35S.74 13.694.74 9.09a8.33 8.33 0 0 1 4.512-7.418.37.37 0 0 0-.34-.657A9.066 9.066 0 0 0 0 9.09c0 5.01 4.078 9.088 9.09 9.088s9.088-4.078 9.088-9.09S14.1 0 9.088 0z"/><path d="M12.653 4.407a5.828 5.828 0 0 0-3.563-1.2c-3.244 0-5.884 2.64-5.884 5.883s2.64 5.884 5.884 5.884a5.848 5.848 0 0 0 4.16-1.723.37.37 0 0 0-.522-.522 5.11 5.11 0 0 1-3.637 1.507c-2.835 0-5.143-2.308-5.143-5.144S6.255 3.948 9.09 3.948a5.168 5.168 0 0 1 4.94 3.706.37.37 0 0 0 .71-.206 5.925 5.925 0 0 0-2.087-3.04z"/><path d="M13.427 7.97a.37.37 0 0 0-.523.523l1.392 1.392a.37.37 0 0 0 .524 0l1.392-1.392a.37.37 0 0 0-.523-.523L14.56 9.1l-1.133-1.13z"/></g></svg>
                     </button>
@@ -245,8 +245,8 @@
                 </div>
                 <div class="employees__col employees__info">
                   <div class="employees__col employees__name">Joy Haynero</div>
-                  <div class="employees__col employees__deadline"><input type="date"></div>
-                  <div class="employees__col employees__wathched">7h 30m</div>
+                  <div class="employees__col employees__deadline mobile-hide"><input type="date"></div>
+                  <div class="employees__col employees__wathched mobile-hide">7h 30m</div>
                   <div class="employees__col employees__correct">69%</div>
                   <div class="employees__col employees__passed">
                     <div class="progress progress--warning progress--small progress--dark">
@@ -254,7 +254,7 @@
                       <div class="progress__text">3/16</div>
                     </div>
                   </div>
-                  <div class="employees__col employees__restart">
+                  <div class="employees__col employees__restart mobile-hide">
                     <button class="employees__btn-restart">
                       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 18.179 18.179"><g fill="#455a64"><path d="M9.09 0a.37.37 0 0 0 0 .74c4.604 0 8.35 3.746 8.35 8.35s-3.746 8.35-8.35 8.35S.74 13.694.74 9.09a8.33 8.33 0 0 1 4.512-7.418.37.37 0 0 0-.34-.657A9.066 9.066 0 0 0 0 9.09c0 5.01 4.078 9.088 9.09 9.088s9.088-4.078 9.088-9.09S14.1 0 9.088 0z"/><path d="M12.653 4.407a5.828 5.828 0 0 0-3.563-1.2c-3.244 0-5.884 2.64-5.884 5.883s2.64 5.884 5.884 5.884a5.848 5.848 0 0 0 4.16-1.723.37.37 0 0 0-.522-.522 5.11 5.11 0 0 1-3.637 1.507c-2.835 0-5.143-2.308-5.143-5.144S6.255 3.948 9.09 3.948a5.168 5.168 0 0 1 4.94 3.706.37.37 0 0 0 .71-.206 5.925 5.925 0 0 0-2.087-3.04z"/><path d="M13.427 7.97a.37.37 0 0 0-.523.523l1.392 1.392a.37.37 0 0 0 .524 0l1.392-1.392a.37.37 0 0 0-.523-.523L14.56 9.1l-1.133-1.13z"/></g></svg>
                     </button>
@@ -267,16 +267,16 @@
                 </div>
                 <div class="employees__col employees__info">
                   <div class="employees__col employees__name">Jonh Gy</div>
-                  <div class="employees__col employees__deadline"><input type="date"></div>
+                  <div class="employees__col employees__deadline mobile-hide"><input type="date"></div>
                   <div class="employees__col employees__wathched">12h 50m</div>
-                  <div class="employees__col employees__correct">99%</div>
+                  <div class="employees__col employees__correct mobile-hide">99%</div>
                   <div class="employees__col employees__passed">
                     <div class="progress progress--success progress--small progress--dark">
                       <div class="progress__bar" style="width: 100%">100%</div>
                       <div class="progress__text">16/16</div>
                     </div>
                   </div>
-                  <div class="employees__col employees__restart">
+                  <div class="employees__col employees__restart mobile-hide">
                     <button class="employees__btn-restart">
                       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 18.179 18.179"><g fill="#455a64"><path d="M9.09 0a.37.37 0 0 0 0 .74c4.604 0 8.35 3.746 8.35 8.35s-3.746 8.35-8.35 8.35S.74 13.694.74 9.09a8.33 8.33 0 0 1 4.512-7.418.37.37 0 0 0-.34-.657A9.066 9.066 0 0 0 0 9.09c0 5.01 4.078 9.088 9.09 9.088s9.088-4.078 9.088-9.09S14.1 0 9.088 0z"/><path d="M12.653 4.407a5.828 5.828 0 0 0-3.563-1.2c-3.244 0-5.884 2.64-5.884 5.883s2.64 5.884 5.884 5.884a5.848 5.848 0 0 0 4.16-1.723.37.37 0 0 0-.522-.522 5.11 5.11 0 0 1-3.637 1.507c-2.835 0-5.143-2.308-5.143-5.144S6.255 3.948 9.09 3.948a5.168 5.168 0 0 1 4.94 3.706.37.37 0 0 0 .71-.206 5.925 5.925 0 0 0-2.087-3.04z"/><path d="M13.427 7.97a.37.37 0 0 0-.523.523l1.392 1.392a.37.37 0 0 0 .524 0l1.392-1.392a.37.37 0 0 0-.523-.523L14.56 9.1l-1.133-1.13z"/></g></svg>
                     </button>
