completed page 'course (admin)'

--- a/src/admin-course.html
+++ b/src/admin-course.html
@@ -155,11 +155,121 @@
             </section>
           </aside>
           <div class="col-md-9 col-sm-12 col-xs-12">
+            <div class="alert-staff mobile-hide">
+              <span class="text-success">8 completed all courses</span>
+              <span class="text-danger">2 overdue</span>
+              <span class="pull-right">click calendar icon to set deadline</span>
+            </div>
+
             <div class="employees">
-              <div class="alert-staff">
-                <span class="text-success">8 completed all courses</span>
-                <span class="text-danger">2 overdue</span>
-                <span class="pull-right">click calendar icon to set deadline</span>
+              <div class="employees__header mobile-hide">
+                <div class="employees__col employees__col--1">Employee</div>
+                <div class="employees__col employees__col--2">deadline</div>
+                <div class="employees__col employees__col--3">watched</div>
+                <div class="employees__col employees__col--4">correct</div>
+                <div class="employees__col employees__col--7">sections passed</div>
+              </div>
+              <div class="employees__row">
+                <div class="employees__col employees__photo">
+                  <img src="img/student-photo.jpg" alt="">
+                </div>
+                <div class="employees__col employees__info">
+                  <div class="employees__col employees__name">Joy Haynero</div>
+                  <div class="employees__col employees__deadline mobile-hide"><input type="date"></div>
+                  <div class="employees__col employees__wathched mobile-hide">8h 30m</div>
+                  <div class="employees__col employees__correct">82%</div>
+                  <div class="employees__col employees__passed employees__passed--right">
+                    <div class="progress progress--progress progress--small progress--dark">
+                      <div class="progress__bar" style="width: 31%">31%</div>
+                      <div class="progress__text">5/16</div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="employees__row">
+                <div class="employees__col employees__photo">
+                  <img src="img/person-thumb-1.png" alt="">
+                </div>
+                <div class="employees__col employees__info">
+                  <div class="employees__col employees__name">Gladys Cross</div>
+                  <div class="employees__col employees__deadline mobile-hide"><input type="date"></div>
+                  <div class="employees__col employees__wathched mobile-hide">12h 20m</div>
+                  <div class="employees__col employees__correct">92%</div>
+                  <div class="employees__col employees__passed employees__passed--right">
+                    <div class="progress progress--success progress--small progress--dark">
+                      <div class="progress__bar" style="width: 100%">100%</div>
+                      <div class="progress__text">12/12</div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="employees__row">
+                <div class="employees__col employees__photo">
+                  <img src="img/person-thumb-2.png" alt="">
+                </div>
+                <div class="employees__col employees__info">
+                  <div class="employees__col employees__name">Jesus Ross</div>
+                  <div class="employees__col employees__deadline mobile-hide"><input type="date"></div>
+                  <div class="employees__col employees__wathched mobile-hide">12h 20m</div>
+                  <div class="employees__col employees__correct">86%</div>
+                  <div class="employees__col employees__passed employees__passed--right">
+                    <div class="progress progress--succces progress--small progress--dark">
+                      <div class="progress__bar" style="width: 100%">100%</div>
+                      <div class="progress__text">12/12</div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="employees__row">
+                <div class="employees__col employees__photo">
+                  <img src="img/student-photo.jpg" alt="">
+                </div>
+                <div class="employees__col employees__info">
+                  <div class="employees__col employees__name">Howard Curro</div>
+                  <div class="employees__col employees__deadline mobile-hide"><input type="date"></div>
+                  <div class="employees__col employees__wathched mobile-hide">12m</div>
+                  <div class="employees__col employees__correct">52%</div>
+                  <div class="employees__col employees__passed employees__passed--right">
+                    <div class="progress progress--danger progress--small progress--dark">
+                      <div class="progress__bar" style="width: 100%">0%</div>
+                      <div class="progress__text">0/16</div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="employees__row">
+                <div class="employees__col employees__photo">
+                  <img src="img/person-thumb-2.png" alt="">
+                </div>
+                <div class="employees__col employees__info">
+                  <div class="employees__col employees__name">Joy Haynero</div>
+                  <div class="employees__col employees__deadline mobile-hide"><input type="date"></div>
+                  <div class="employees__col employees__wathched mobile-hide">7h 30m</div>
+                  <div class="employees__col employees__correct">69%</div>
+                  <div class="employees__col employees__passed employees__passed--right">
+                    <div class="progress progress--warning progress--small progress--dark">
+                      <div class="progress__bar" style="width: 20%">20%</div>
+                      <div class="progress__text">3/16</div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="employees__row">
+                <div class="employees__col employees__photo">
+                  <img src="img/student-photo.jpg" alt="">
+                </div>
+                <div class="employees__col employees__info">
+                  <div class="employees__col employees__name">Jonh Gy</div>
+                  <div class="employees__col employees__deadline mobile-hide"><input type="date"></div>
+                  <div class="employees__col employees__wathched mobile-hide">12h 50m</div>
+                  <div class="employees__col employees__correct">99%</div>
+                  <div class="employees__col employees__passed employees__passed--right">
+                    <div class="progress progress--success progress--small progress--dark">
+                      <div class="progress__bar" style="width: 100%">100%</div>
+                      <div class="progress__text">16/16</div>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
