--- a/src/admin-staff.html
+++ b/src/admin-staff.html
@@ -268,8 +268,8 @@
                 <div class="employees__col employees__info">
                   <div class="employees__col employees__name">Jonh Gy</div>
                   <div class="employees__col employees__deadline mobile-hide"><input type="date"></div>
-                  <div class="employees__col employees__wathched">12h 50m</div>
-                  <div class="employees__col employees__correct mobile-hide">99%</div>
+                  <div class="employees__col employees__wathched mobile-hide">12h 50m</div>
+                  <div class="employees__col employees__correct">99%</div>
                   <div class="employees__col employees__passed">
                     <div class="progress progress--success progress--small progress--dark">
                       <div class="progress__bar" style="width: 100%">100%</div>
