--- a/src/admin-courses.html
+++ b/src/admin-courses.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   
-  <header class="header header--admin">
+  <header class="header">
     <div class="container container--small">
       <div class="row">
         <div class="col-md-3 col-xs-12">
@@ -111,7 +111,7 @@
           <div class="course-preview__col course-preview__col--4">
             <div class="course-preview__col course-preview__col--4-1">
               <a href="#" class="course-preview__title">3496 Aviation Weather Forecasts course</a>
-              <span class="course-preview__time">9h 20m</sapn>, 
+              <span class="course-preview__time">9h 20m</span>, 
               <p class="course-preview__about course-preview__about--inline">Elective, every year <span class="text-success">repeat until 26.03.2017</span></p>
               <a href="#" class="btn btn--gray-edit tablet-hide">Edit</a>
             </div>
