--- a/src/admin-profile.html
+++ b/src/admin-profile.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-  <header class="header header--admin">
+  <header class="header">
     <div class="container container--small">
       <div class="row">
         <div class="col-md-3 col-xs-12">
