--- a/src/help.html
+++ b/src/help.html
@@ -52,7 +52,7 @@
           </header>
           <div class="collapse__content">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum exercitationem aut maiores officiis inventore architecto error incidunt aliquam animi ipsa, consequuntur cum quo harum voluptas odio delectus quisquam laboriosam facilis?</p>
-            <iframe src="https://player.vimeo.com/video/160730254" height="270" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+            <iframe src="https://player.vimeo.com/video/160730254" height="270" allowfullscreen></iframe>
           </div>
         </article>
 
