--- a/src/instructor.html
+++ b/src/instructor.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-  <header class="header header--admin">
+  <header class="header">
     <div class="container container--small">
       <div class="row">
         <div class="col-md-3 col-xs-12">
@@ -47,7 +47,7 @@
     </div>
   </header>
 
-  <section class="profile-view page-header">
+  <div class="profile-view page-header">
     <div class="container container--small">
       <div class="row">
         <div class="col-md-8 col-sm-12 col-xs-12">
@@ -68,7 +68,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </div>
 
   <div class="container container--small">
     <section class="courses-list">
