--- a/src/instructors.html
+++ b/src/instructors.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-  <header class="header header--admin">
+  <header class="header">
     <div class="container container--small">
       <div class="row">
         <div class="col-md-3 col-xs-12">
@@ -52,7 +52,7 @@
 
       <div class="col-md-8">
         <section class="instructors">
-          <h1 class="instructors__title">Instructors <span class="instructors__title-count">5</span></h1>
+          <h2 class="instructors__title">Instructors <span class="instructors__title-count">5</span></h2>
           <div class="instructors__person">
             <div class="instructors__person-photo">
               <img src="img/student-photo.jpg" alt="">
