--- a/src/course-test.html
+++ b/src/course-test.html
@@ -126,7 +126,7 @@
                   <a href="#" class="test-progress__step test-progress__step--missed">12</a>
                 </div>
                 <div class="test-nav__btns">
-                  <a href="#" class="course-section__head-arrow btn btn--arrow btn--arrow--hover"><<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 9.932 10.192"><path d="M9.932 4.666a.65.65 0 0 0-.65-.65H3.885l2.29-2.29a.656.656 0 0 0 0-.923L5.56.19a.656.656 0 0 0-.922 0L.19 4.636a.652.652 0 0 0 0 .92l4.448 4.447a.656.656 0 0 0 .923 0l.615-.615a.656.656 0 0 0 0-.923l-2.29-2.28h5.392c.36 0 .65-.292.65-.65l.005-.87z" /></svg></a>
+                  <a href="#" class="course-section__head-arrow btn btn--arrow btn--arrow--hover"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 9.932 10.192"><path d="M9.932 4.666a.65.65 0 0 0-.65-.65H3.885l2.29-2.29a.656.656 0 0 0 0-.923L5.56.19a.656.656 0 0 0-.922 0L.19 4.636a.652.652 0 0 0 0 .92l4.448 4.447a.656.656 0 0 0 .923 0l.615-.615a.656.656 0 0 0 0-.923l-2.29-2.28h5.392c.36 0 .65-.292.65-.65l.005-.87z" /></svg></a>
 
                   <a href="#" class="section-nav__next btn btn--icon btn--next">
                     Next question
