--- a/src/admin-course.html
+++ b/src/admin-course.html
@@ -108,7 +108,7 @@
 
   <div class="container container--small">
     <div class="course-info js-tab-container">
-      <div class="staff">
+      <div class="staff js-tab js-tab--active">
         <div class="row">
           <aside class="col-md-3 col-sm-12 col-xs-12 pull-right">
             <section class="filter">
@@ -270,6 +270,71 @@
                     </div>
                   </div>
                 </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="forum js-tab">
+        <p class="forum__title">Forum</p>
+        <div class="forum__messages">
+
+          <div class="forum__comments">
+
+            <div class="forum__comment-wrap">
+              <div class="forum__avatar-wrap">
+                <img src="img/person-thumb-1.png" alt="" class="forum__avatar">
+              </div>
+              <div class="forum__comment">
+                <div class="forum__comment-head">
+                  <span class="forum__comment-author">Adam Mccarthy</span>
+                  <span class="forum__comment-date">February 23, 2016</span>
+                  <a href="#" class="btn btn--forum btn--reply">Reply</a>
+                </div>
+                <div class="forum__comment-text">
+                  <p>Lorem Ipsum is simply dummy text of the printing and typesetting</p>
+                  <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type </p>
+                </div>
+              </div>
+            </div>
+
+            <div class="forum__comment-wrap forum__comment-wrap--reply forum__comment-wrap--draft">
+              <div class="forum__avatar-wrap">
+                <img src="img/person-thumb-1.png" alt="" class="forum__avatar">
+              </div>
+              <div class="forum__comment">
+                <div class="forum__comment-head">
+                  <span class="forum__comment-author">Adam Mccarthy</span>
+                  <span class="forum__comment-date">February 23, 2016</span>
+                  <a href="#" class="btn btn--forum btn--publish">Publish</a>
+                </div>
+                <div class="forum__comment-text">
+                  <p>Lorem Ipsum is simply dummy text of the printing and typesetting</p>
+                  <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type </p>
+                </div>
+              </div>
+            </div>
+
+          </div>
+
+          <div class="forum__comments forum__comments--answer">
+            <div class="forum__comment-wrap">
+              <div class="forum__avatar-wrap">
+                <img src="img/person-thumb-2.png" alt="" class="forum__avatar">
+              </div>
+              <div class="forum__comment">
+                <div class="forum__comment-head">
+                  <span class="forum__comment-author">Your answer</span>
+                  <p class="forum__comment-date">
+                    <span class="forum__draft-icon"><svg  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 25.259 17.446"><path d="M9.713 8.723c0-.777.29-1.458.874-2.042s1.265-.874 2.042-.874L9.713 8.723zm-.873.874c-.097-.29-.097-.584-.097-.874a3.896 3.896 0 0 1 3.886-3.886c.29 0 .584 0 .874.097l2.621-2.621c-1.067-.29-2.235-.391-3.5-.391C3.886 1.92 0 8.723 0 8.723s1.555 2.718 4.953 4.76L8.84 9.597zm6.706-.874l-2.916 2.916c.777 0 1.458-.29 2.042-.874.579-.584.874-1.265.874-2.042zm4.76-4.76L16.42 7.849c.097.29.097.584.097.874a3.896 3.896 0 0 1-3.886 3.886c-.29 0-.584 0-.874-.097l-2.621 2.621c1.067.29 2.235.386 3.495.386 8.743 0 12.629-6.802 12.629-6.802s-1.556-2.712-4.954-4.754zM20.392 0L3.907 16.485l.96.96L21.357.955 20.392 0z" fill="#fff"/></svg></span>
+                  will be published after instructor’s review
+                  </p>
+                </div>
+                <form class="forum__comment-answer">
+                  <textarea name="answer" rows="3"></textarea>
+                  <button type="submit" class="btn btn--forum btn--submit">Submit</button>
+                </form>
               </div>
             </div>
           </div>
