--- a/src/edit-test.html
+++ b/src/edit-test.html
@@ -11,10 +11,10 @@
   <header class="header header--admin">
     <div class="wrapper">
       <div class="row">
-        <div class="col-md-3 col-xs-12">
+        <div class="col-md-3">
           <div class="logo">Online <span class="logo__second">Learning System</span></div>
         </div>
-        <div class="col-md-9 col-xs-12 header__menu">
+        <div class="col-md-9 header__menu">
           <nav class="menu">
             <ul class="menu__list">
               <li class="menu__item">
