--- a/src/index.html
+++ b/src/index.html
@@ -35,6 +35,9 @@
       <li><a href="instructor.html">Instructor page</a></li>
       <li><a href="instructors.html">Instructors</a></li>
       <li><a href="profile-edit.html">Profile edit</a></li>
+
+      <li style="list-style: none; margin:15px 0 10px;"><b>EXTRA</b></li>
+      <li><a href="edit-course.html">Course</a></li>
     </ul>
   </div>
 
