changed element with tab navigation into the component nav-tabs

--- a/src/admin-course.html
+++ b/src/admin-course.html
@@ -92,14 +92,14 @@
           </div>
         </div>
       </div>
-      <ul class="user-courses__nav user-courses__nav--course-admin">
-        <li class="user-courses__nav-item user-courses__nav-item--active">
+      <ul class="nav-tabs nav-tabs--course-admin">
+        <li class="nav-tabs__item nav-tabs__item--active">
           <a href="#" class="link-with-number js-tab-control" data-target="staff">Staff <span class="link-with-number__value">22</span></a>
         </li>
-        <li class="user-courses__nav-item">
+        <li class="nav-tabs__item">
           <a href="#" class="link-with-number js-tab-control" data-target="sections">Sections</a>
         </li>
-        <li class="user-courses__nav-item">
+        <li class="nav-tabs__item">
           <a href="#" class="link-with-number js-tab-control" data-target="forum">Forum <span class="link-with-number__value">12</span></a>
         </li>
       </ul>
