--- a/src/courses.html
+++ b/src/courses.html
@@ -57,11 +57,11 @@
             </div>
           </div>
         </div>
-        <ul class="user-courses__nav">
-          <li class="user-courses__nav-item user-courses__nav-item--active">
+        <ul class="nav-tabs">
+          <li class="nav-tabs__item nav-tabs__item--active">
             <a href="#" class="link-with-number">Scheduled <span class="mobile-hide">courses</span><span class="link-with-number__value">5</span></a>
           </li>
-          <li class="user-courses__nav-item">
+          <li class="nav-tabs__item">
             <a href="#" class="link-with-number">Completed <span class="mobile-hide">courses</span><span class="link-with-number__value">16</span></a>
           </li>
         </ul>
