--- a/src/admin-courses.html
+++ b/src/admin-courses.html
@@ -75,11 +75,11 @@
             </div>
           </div>
         </div>
-        <ul class="user-courses__nav">
-          <li class="user-courses__nav-item user-courses__nav-item--active">
+        <ul class="nav-tabs">
+          <li class="nav-tabs__item nav-tabs__item--active">
             <a href="#" class="link-with-number js-tab-control" data-target="all-courses">All <span class="link-with-number__value">45</span></a>
           </li>
-          <li class="user-courses__nav-item">
+          <li class="nav-tabs__item">
             <a href="#" class="link-with-number js-tab-control" data-target="my-courses">My <span class="link-with-number__value">5</span></a>
           </li>
         </ul>
