--- a/src/edit-course.html
+++ b/src/edit-course.html
@@ -99,6 +99,20 @@
         </div>
 
       </aside>
+
+      <div class="edit-area__editor">
+        <div class="edit-course">
+          <h2 class="edit-area__title h3">Course info</h2>
+          <ul class="nav-tabs">
+            <li class="nav-tabs__item nav-tabs__item--active">
+              <a href="#" class="link-with-number">General</a>
+            </li>
+            <li class="nav-tabs__item">
+              <a href="#" class="link-with-number">Announcements <span class="link-with-number__value">2</span></a>
+            </li>
+          </ul>
+        </div>
+      </div>
       
 
 
