added components edit-area and edit-area-alert

--- a/src/edit-course.html
+++ b/src/edit-course.html
@@ -101,16 +101,62 @@
       </aside>
 
       <div class="edit-area__editor">
-        <div class="edit-course">
-          <h2 class="edit-area__title h3">Course info</h2>
-          <ul class="nav-tabs">
-            <li class="nav-tabs__item nav-tabs__item--active">
-              <a href="#" class="link-with-number">General</a>
-            </li>
-            <li class="nav-tabs__item">
-              <a href="#" class="link-with-number">Announcements <span class="link-with-number__value">2</span></a>
-            </li>
-          </ul>
+        <form action="">
+          <div class="edit-area__editor-head">
+            <h2 class="edit-area__editor-title h3">Course info</h2>
+            <ul class="nav-tabs">
+              <li class="nav-tabs__item nav-tabs__item--active">
+                <a href="#" class="link-with-number">General</a>
+              </li>
+              <li class="nav-tabs__item">
+                <a href="#" class="link-with-number">Announcements <span class="link-with-number__value">2</span></a>
+              </li>
+            </ul>
+            <div class="edit-area-alert">Changes saved</div>
+          </div>
+          <div class="edit-course">
+            <div class="edit-course__col edit-course__col--1">
+              <div class="edit-course__row">
+                <label for=""></label>
+                <input type="text">
+              </div>
+              <div class="edit-course__row">
+                <label for=""></label>
+                <textarea name="" id="" rows="5"></textarea>
+              </div>
+              <div class="edit-course__row">
+                <label for=""></label>
+                <input type="text">
+              </div>
+              <div class="edit-course__row">
+                <div class="edit-course__form-group edit-course__group--1">
+
+                </div>
+                <div class="edit-course__group edit-course__group--1">
+
+                </div>
+                <div class="edit-course__group edit-course__group--2">
+
+                </div>
+              </div>
+              <div class="edit-course__row">
+                <div class="edit-course__form-group edit-course__group--half">
+                  <label for=""></label>
+                  <input type="text">
+                </div>
+                <div class="edit-course__group edit-course__group--half">
+                  <label for=""></label>
+                  <input type="text">
+                </div>
+              </div>
+            </div>
+            <div class="edit-course__col edit-course__col--2">
+              
+            </div>
+          </div>
+        </form>
+
+
         </div>
       </div>
       
